src/test/c/reject/08-wrongTypeAssignment.msh
/**
 * Note myNote = Chord(c, e, g, d#);
 * Este programa es aceptado debido a que no hay validación de tipos para el front-end.
 */